Mybatsi自动生成语句完成版

--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -19,8 +19,8 @@ targetProject=F:\\workspace_javaee\\finalssm
 targetPackageBase=com.ssf.dao
 ################################ after this , you should change your own bussiness code ############## 
 ## myBussinessPackage : based on 'com/alexgaoyh/MutiModule/Dubbo/RWSeperate/persist' part ;
-myBussinessPackage=com.ssf.dao.demo
-
+myBussinessPackage=com.ssf.dao
+myModelPackage=com.ssf.model
 ## table Element : tableName part, your database table name
 
 tableName=sys_category
