--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 		<spring.version>4.1.3.RELEASE</spring.version>
 
 		<thymeleaf.version>3.0.5.RELEASE</thymeleaf.version>
+		
+		
+		<dom4j.dom4j>1.6.1</dom4j.dom4j>
+		<jaxen.jaxen>1.1.6</jaxen.jaxen>
 	</properties>
 
 	<dependencies>
@@ -252,6 +256,18 @@
 			<version>1.0.8</version>
 		</dependency>
 		<!--mybatis 数据访问层 end -->
+		
+		<!-- XML文件 -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>${dom4j.dom4j}</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>${jaxen.jaxen}</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>org.mybatis.generator</groupId>
