--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,11 @@
 			<artifactId>jaxen</artifactId>
 			<version>${jaxen.jaxen}</version>
 		</dependency>
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.4.01</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>org.mybatis.generator</groupId>
