Mybatis自动生成数据库结构

--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -14,7 +14,7 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 #userId=root
 #password=123456
 
-targetProject=F:\\workspace_javaee\\finalssm
+targetProject=E:\\workspace\\finalssm
 
 targetPackageBase=com.ssf.dao
 ################################ after this , you should change your own bussiness code ############## 
