--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,12 +1,12 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
 
-dbName=finalssm
+dbName=jqm_water
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/finalssm?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:6666/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
@@ -16,8 +16,8 @@ targetProject=
 #targetPackageBase=com.ssf.dao
 ################################ after this , you should change your own bussiness code ############## 
 ## myBussinessPackage : based on 'com/alexgaoyh/MutiModule/Dubbo/RWSeperate/persist' part ;
-myBussinessPackage=com.ssf.dao
-myModelPackage=com.ssf.model
+myBussinessPackage=com.jqm.ssm.dao
+myModelPackage=com.jqm.ssm.entity
 ## table Element : tableName part, your database table name
 
 tableName=sys_category
