--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,24 @@
 		    <artifactId>javase</artifactId>
 		    <version>3.2.1</version>
 		</dependency>
+		
+		<!-- poi处理Office文档 -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.15</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>3.15</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-scratchpad</artifactId>
+	    <version>3.15</version>
+	</dependency>
+		
 		<!-- 本地工程包 -->
 		<dependency>
 			<groupId>com.springside4</groupId>
@@ -339,8 +357,8 @@
 	            <artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<!--  -->
