批量插入语

--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,10 +1,10 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
 
-dbName=jqm_water
+dbName=jqm_water_test
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:6666/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:6666/jqm_water_test?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=
 druid.pool.size.max=20
