--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<spring.version>4.1.3.RELEASE</spring.version>
 
 		<thymeleaf.version>3.0.5.RELEASE</thymeleaf.version>
-		
+		<freemarker.version>2.3.22</freemarker.version>
 		
 		<dom4j.dom4j>1.6.1</dom4j.dom4j>
 		<jaxen.jaxen>1.1.6</jaxen.jaxen>
@@ -200,7 +200,11 @@
 		    <version>${thymeleaf.version}</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+		</dependency>
 		<!--mybatis 数据访问层 start -->
 		<dependency>
 			<groupId>mysql</groupId>
