批量插入语

--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -16,8 +16,10 @@ targetProject=
 #targetPackageBase=com.ssf.dao
 ################################ after this , you should change your own bussiness code ############## 
 ## myBussinessPackage : based on 'com/alexgaoyh/MutiModule/Dubbo/RWSeperate/persist' part ;
+myBasePackage=com.jqm.ssm
 myBussinessPackage=com.jqm.ssm.dao
 myModelPackage=com.jqm.ssm.entity
+myServicePackage=com.jqm.ssm.service
 ## table Element : tableName part, your database table name
 
 tableName=sys_category
@@ -25,3 +27,6 @@ tableName=sys_category
 domainObjectName=Category
 ## table Element : alias part, your own database table alias name
 alias=sys_category
+
+##############################################集成部分
+inherit_basemapper=com.jqm.ssm.base.BaseMapper
