--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,12 +1,12 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
-
-dbName=jqm_water_test
+catalina.base=/tmp
+dbName=privilege
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:6666/jqm_water_test?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/privilege?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
 jdbc.username=root
-jdbc.password=
+jdbc.password=123456
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
@@ -20,6 +20,7 @@ myBasePackage=com.jqm.ssm
 myBussinessPackage=com.jqm.ssm.dao
 myModelPackage=com.jqm.ssm.entity
 myServicePackage=com.jqm.ssm.service
+myWebPackage=com.jqm.ssm.controller
 ## table Element : tableName part, your database table name
 
 tableName=sys_category
@@ -28,5 +29,5 @@ domainObjectName=Category
 ## table Element : alias part, your own database table alias name
 alias=sys_category
 
-##############################################¼¯³É²¿·Ö
+##############################################ï¿½ï¿½ï¿½É²ï¿½ï¿½ï¿½
 inherit_basemapper=com.jqm.ssm.base.BaseMapper
