--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,10 +1,10 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
 catalina.base=/tmp
-dbName=privilege
+dbName=jqm_water
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/privilege?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
 jdbc.username=root
 jdbc.password=123456
 druid.pool.size.max=20
@@ -20,7 +20,7 @@ myBasePackage=com.jqm.ssm
 myBussinessPackage=com.jqm.ssm.dao
 myModelPackage=com.jqm.ssm.entity
 myServicePackage=com.jqm.ssm.service
-myWebPackage=com.jqm.ssm.controller
+myWebPackage=com.jqm.ssm.web
 ## table Element : tableName part, your database table name
 
 tableName=sys_category
