--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -6,7 +6,7 @@ dbType=mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
