--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
 	</properties>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>info.picocli</groupId>
+			<artifactId>picocli</artifactId>
+			<version>3.5.2</version>
+		</dependency>
 		<!--common start -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -147,21 +158,18 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
@@ -186,25 +194,6 @@
 			<version>2.7.4</version>
 		</dependency>
 		<!--springmvc end -->
-
-		<!-- thymeleaf -->
-		<dependency>
-		    <groupId>org.thymeleaf</groupId>
-		    <artifactId>thymeleaf</artifactId>
-		    <version>${thymeleaf.version}</version>
-		</dependency>
-
-		<dependency>
-		    <groupId>org.thymeleaf</groupId>
-		    <artifactId>thymeleaf-spring4</artifactId>
-		    <version>${thymeleaf.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>${freemarker.version}</version>
-		</dependency>
 		<!--mybatis 数据访问层 start -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -236,7 +225,14 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-maven-plugin</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+		<!--mybatis 数据访问层 end -->
 
+		<!-- redis -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
@@ -247,21 +243,36 @@
 			<artifactId>spring-data-redis</artifactId>
 			<version>1.6.4.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.dyuproject.protostuff</groupId>
 			<artifactId>protostuff-core</artifactId>
 			<version>1.0.8</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.dyuproject.protostuff</groupId>
 			<artifactId>protostuff-runtime</artifactId>
 			<version>1.0.8</version>
 		</dependency>
-		<!--mybatis 数据访问层 end -->
-		
-		<!-- XML文件 -->
+
+
+		<!-- thymeleaf模板引擎-->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>${thymeleaf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>${thymeleaf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+		</dependency>
+
+		<!-- XML文件-->
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
@@ -277,12 +288,8 @@
 			<artifactId>xml-apis</artifactId>
 			<version>1.4.01</version>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.mybatis.generator</groupId>
-		    <artifactId>mybatis-generator-maven-plugin</artifactId>
-		    <version>1.3.5</version>
-		</dependency>
+
+
 		<!-- JSoup解析HTML文件 -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -307,7 +314,7 @@
 		    <version>3.2.1</version>
 		</dependency>
 		
-		<!-- poi处理Office文档 -->
+	<!-- poi处理Office文档-->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi</artifactId>
@@ -323,7 +330,7 @@
 	    <artifactId>poi-scratchpad</artifactId>
 	    <version>3.15</version>
 	</dependency>
-		
+
 		<!-- 本地工程包 -->
 		<dependency>
 			<groupId>com.springside4</groupId>
