--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,12 +1,12 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
 catalina.base=/tmp
-dbName=privilege
+dbName=jqm_water
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/privilege?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
@@ -14,23 +14,26 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 
 targetProject=
 ################################ after this , you should change your own bussiness code ##############
-myBasePackage=com.wyy
-myBussinessPackage=com.wyy.dao
-myModelPackage=com.wyy.entity
-myServicePackage=com.wyy.service
-myWebPackage=com.wyy.web
+myBasePackage=com.jqm.ssm
+myBussinessPackage=com.jqm.ssm.dao
+myModelPackage=com.jqm.ssm.entity
+myServicePackage=com.jqm.ssm.service
+myWebPackage=com.jqm.ssm.web
 
-inherit_basemapper=com.wyy.base.BaseMapper
+inherit_basemapper=com.jqm.ssm.base.BaseMapper
 ##############################################
 tableName=sys_category
 domainObjectName=Category
 alias=sys_category
 ##############################################
-src_path=/Users/arafat/workspace/IdeaProjects/privilege
-out_path=/Users/arafat/workspace/IdeaProjects/starter
-src_map_suffix=Mapper
+src_path=D:\\workspace\\IdeaProject\\wy
+#/Users/arafat/workspace/IdeaProjects/privilege
+out_path=D:\\workspace\\IdeaProject\\wy
+#/Users/arafat/workspace/IdeaProjects/starter
+src_map_suffix=Dao
 mapper_suffix=Dao
 
 generate_level=1
 copy_to_target=1
-db_prefix=p_
+db_prefix=d_
+db_copytable=d_deviceinfodata_pollution
