--- a/src/main/resources/mybatis-generator.properties
+++ b/src/main/resources/mybatis-generator.properties
@@ -1,12 +1,12 @@
 #classPath=C:\\Users\\lenovo\\.m2\\repository\\mysql\\mysql-connector-java\\5.1.21\\mysql-connector-java-5.1.21.jar
 catalina.base=/tmp
-dbName=jqm_water
+dbName=roadtrip
 dbType=mysql
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/jqm_water?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true&amp;useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:6688/roadtrip?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
@@ -14,26 +14,28 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 
 targetProject=
 ################################ after this , you should change your own bussiness code ##############
-myBasePackage=com.jqm.ssm
-myBussinessPackage=com.jqm.ssm.dao
-myModelPackage=com.jqm.ssm.entity
-myServicePackage=com.jqm.ssm.service
-myWebPackage=com.jqm.ssm.web
+myBasePackage=com.jqmkj.roadtrip
+myBussinessPackage=com.jqmkj.roadtrip.dao
+myModelPackage=com.jqmkj.roadtrip.entity
+myServicePackage=com.jqmkj.roadtrip.service
+myWebPackage=com.jqmkj.roadtrip.web
 
-inherit_basemapper=com.jqm.ssm.base.BaseMapper
+inherit_basemapper=com.jqmkj.roadtrip.base.BaseMapper
 ##############################################
 tableName=sys_category
 domainObjectName=Category
 alias=sys_category
 ##############################################
-src_path=D:\\workspace\\IdeaProject\\wy
+src_path=/Users/arafat/workspace/IdeaProjects/RiverResponsibleSystem
+#D:\\workspace\\IdeaProject\\wy
 #/Users/arafat/workspace/IdeaProjects/privilege
-out_path=D:\\workspace\\IdeaProject\\wy
+out_path=/Users/arafat/workspace/IdeaProjects/RiverResponsibleSystem
+#D:\\workspace\\IdeaProject\\wy
 #/Users/arafat/workspace/IdeaProjects/starter
 src_map_suffix=Dao
 mapper_suffix=Dao
 
 generate_level=1
 copy_to_target=1
-db_prefix=d_
-db_copytable=d_deviceinfodata_pollution
+db_prefix=c_
+db_copytable=c_monitorsite
